# helloWorld_mingw32

./: CMakeLists.txt  README.txt
src/: CMakeLists.txt
